# imzy

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  Makefile  None  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: ci.yml  test-comprehensive.yml
imzy/: __init__.py  _extract.py  _version.py  types.py  utilities.py
imzy/_centroids/: __init__.py  _base.py  _hdf5_store.py  _memory_store.py  _zarr_store.py  utilities.py
imzy/_readers/: __init__.py  _base.py
imzy/_readers/imzml/: __init__.py  _imzml.py  _ms.py  _ontology.py
misc/: test-comprehensive.yml
scripts/: build_package.sh  dump_obo_files.py  importtime.sh
src/imzy/: __init__.py  _extract.py  _hdf5_mixin.py  _typing.py  hookspec.py  plugins.py  processing.py  utilities.py
src/imzy/_centroids/: __init__.py  _base.py  _extract.py  _hdf5_store.py  _memory_store.py  _zarr_store.py
src/imzy/_normalizations/: __init__.py  _extract.py  _hdf5_store.py
src/imzy/_readers/: __init__.py  _base.py
src/imzy/_readers/bruker/: __init__.py  _metadata.py  _mixin.py  _tdf.py  _tsf.py  utilities.py
src/imzy/_readers/imzml/: __init__.py  _ims.py  _imzml.py  _ontology.py  _uo.py
tests/: test_imzml.py  test_norm.py  test_plugin.py  test_tdf.py  test_tsf.py  utilities.py
tests/_test_data/: Example_Continuous.icache  Example_Processed.icache  simple_imzml.ibd  simple_imzml.icache  simple_imzml.imzML
tests/_test_data/example_tdf.d/: analysis.tdf
tests/_test_data/example_tdf.d/230518_TIMS_400-1800D_DMACA_autosample_50ramps.m/: InstrumentSetup.isset  Maldi.method  microTOFQImpacTemAcquisition.method  submethods.xml
tests/_test_data/example_tsf.d/: Storage.mcf_idx  analysis.0.DataAnalysis.method  analysis.0.result_c  analysis.content  analysis.tsf  analysis.tsf_bin
tests/_test_data/example_tsf.d/.icache/: frame_index_cache.npz
tests/_test_data/example_tsf.d/20230407_5_25_m2_neg.m/: Maldi.method  microTOFQImpacTemAcquisition.method
tests/_test_data/example_tsf.d/example_tsf.m/: InstrumentSetup.isset  submethods.xml
tests/test_example/: test_hello.py
