[metadata]
name = imzy
url = https://github.com/lukasz-migas/imzy
download_url = https://github.com/lukasz-migas/imzy
license = BSD-3
license_file = LICENSE
description = imzy: A new reader/writer interface to imzML and other imaging mass spectrometry formats.
long_description = file: README.md
long_description_content_type = text/markdown
author = Lukasz G. Migas
author_email = l.g.migas@tudelft.nl
classifiers =
    Development Status :: 3 - Alpha
    Environment :: X11 Applications :: Qt
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Natural Language :: English

# # !=3.9.*, !=3.10.*  pytables does not support python 3.9 and above yet.
[options]
zip_safe = False
packages = find:
python_requires = >=3.7
include_package_data = True
setup_requires =
    numpy
install_requires =
    numpy
    scipy
    numba
    tqdm

# for explanation of %(extra)s syntax see:
# https://github.com/pypa/setuptools/issues/1260#issuecomment-438187625
# this syntax may change in the future
[options.extras_require]
# all is the full "batteries included" extra.
all =
    %(zarr)s
    %(plot)s
zarr =
    dask
    zarr
    rechunker
plot =
    matplotlib
testing =
    pytest
    pytest-cov
    pytest-html
    coverage
    coverage-badge
release =
    PyGithub>=1.44.1
    twine>=3.1.1
    pygithub
    tqdm
dev =
    pre-commit
    black
    flake8
    isort
    darglint
    mypy
    mypy-extensions
    safety
    bandit
    pylint
    pydocstyle
    check-manifest>=0.42
    %(all)s
    %(testing)s
docs =
    mkdocs
    mkdocs-material
    markdown-changelog

[flake8]
ignore = E1137, E722, D413, D401, D205, W503, W504, W605, F841, E203, W1202
max-line-length = 120
exclude =
    .git,
    .vscode,
    .settings,
    __pycache__,
    docs,
    site-source,
    dist,
    setup.py,
statistics=True

[mypy]
files = imzy
ignore_missing_imports = True

[darglint]
# https://github.com/terrencepreilly/darglint
strictness = long
docstring_style = numpy
